[package]
name = "capwash"
version = "0.1.0"
edition = "2021"
authors = ["Adam Hott"]
description = "Redact PII, credentials, and network fingerprints from legacy .pcap captures — exports structured JSON findings and an optional protocol acronym guide."
license = "MIT"
repository = "https://github.com/adamhottt/capwash"
keywords = ["pcap", "redaction", "privacy", "network", "forensics"]
categories = ["command-line-utilities", "network-programming"]


[dependencies]
pcap-parser = "0.14"
nom = "7"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ipnet = "2"
csv = "1"